--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,8 @@
   --main-grey: #e5e5e5;
   --main-white: #fff;
   --black: #2b2b2b;
+  --red: #fc3e3e;
+  --dark-red: #7a2222;
+  --green: #8fe281;
+  --dark-green: #46753e;
 }
