--- a/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
+++ b/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
@@ -1,1 +1,101 @@
 /* styles */
+.reservation{
+    max-width: 100%;
+    max-height: 100%;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    right: 0;
+    top: 0;
+    position: relative;
+}
+
+.reservationAlign{
+    border-radius: 5px;
+    background-color: lightgray;
+    width:70%;
+    height: 100%;
+    overflow: hidden;
+ }
+ 
+.reservationColor{
+    background-color: var(--main-grey);
+    height: 750px;
+}
+
+.reservationTitle{
+    text-align: center;
+    color: black;
+}
+
+.reservationLongBox{
+    border-radius: 10px;
+    background: white;
+    border-color: white;
+    padding: 10px;
+    width: 80%;
+    min-width: 50px;
+    max-width: 620px;
+    height: 35px;
+    margin-left: 150px;
+}
+
+.reservationLabel{
+    color: black;
+    margin-top: 10px;
+    margin-left:  150px;
+}
+
+input{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid gray;
+    font-size: 1.1em;
+}
+
+.reservationInputBox{
+    border-radius: 10px;
+    background: white;
+    border-color: white;
+    padding: 10px;
+    width: 200px;
+    height: 35px;
+    margin-left: 150px;
+}
+
+.reservationBtn{
+    margin-left: 430px;
+    margin-top: 30px;
+    background-color: var(--main-accent);
+    color: var(--main-white);
+    padding: 0.5rem 1.5rem;
+    border-radius: 10px;
+}
+
+.garageFloor{
+    margin-top: 20px;
+    border-style: solid;
+    border-color: black;
+    width: 300px;
+    height: 110px;
+}
+
+.parkingSpot{
+    height: 45px;
+    width: 30px;
+    background-color: aquamarine;
+    margin-left:-10px;
+    margin-right:-30px;
+    margin-top: 5px;
+    margin-bottom: 2px;
+}
+
+.parkingLabel{
+    margin-left: 8px;
+    color: white;
+}
+
+.error{
+    color: red;
+    margin-left: 150px;
+}
