--- a/src/Components/Pages/LandingPage/LandingPage.module.css
+++ b/src/Components/Pages/LandingPage/LandingPage.module.css
@@ -2,28 +2,28 @@
   color: var(--black);
   background-color: var(--main-grey);
   width: 100%;
-  height: 31.25vh;
+  height: 35vh;
 }
 .mid {
   color: var(--black);
   width: 100%;
-  height: 35.25vh;
+  height: 45vh;
 }
 .footer {
   color: var(--black);
   background-color: var(--main-grey);
   text-align: center;
   width: 100%;
-  height: 27.15vh;
+  height: 30vh;
 }
 
 .landingHeader {
-  padding-top: 4rem;
+  padding-top: 3.5rem;
   font-size: 3rem;
 }
 
 .landingSub {
-  padding-top: 2.5rem;
+  padding-top: 1.5rem;
   font-size: 2rem;
 }
 .landingHeader:last-of-type,
@@ -39,9 +39,14 @@
   margin: 2rem auto;
 }
 
+.phoneImg{
+  margin-top: 2.5rem;
+  height: 35vh;
+}
+
 .footer p {
   padding-top: 2.5rem;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 300;
 }
 
@@ -52,9 +57,9 @@
   color: var(--main-white);
   display: inline-block;
   border-radius: 25px;
-  padding: 1rem 1rem;
+  padding: .5rem 1rem;
   border: none;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 300;
 }
 .reserve {
