--- a/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
+++ b/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
@@ -14,13 +14,13 @@
     border-radius: 5px;
     background-color: lightgray;
     width:70%;
-    height: 100%;
+    height: 95vh;
     overflow: hidden;
  }
  
 .reservationColor{
     background-color: var(--main-grey);
-    height: 750px;
+    height: 100vh;
 }
 
 .reservationTitle{
