--- a/src/Components/Pages/CancelPage/CancelPage.module.css
+++ b/src/Components/Pages/CancelPage/CancelPage.module.css
@@ -1,1 +1,37 @@
 /* styles */
+.cancelAlign{
+    border-radius: 5px;
+    background-color: lightgray;
+    width:70%;
+    height: 100%;
+    overflow: hidden;
+ }
+
+ .cancelTitle{
+    text-align: center;
+    color: var(--black);
+}
+
+.cancelInputBox{
+    border-radius: 10px;
+    background: var(--main-white);
+    border-color: var(--black);
+    padding: 10px;
+    width: 500px;
+    height: 30px;
+    margin-left: 10px;
+}
+
+.cancelBtn{
+    margin-left: 430px;
+    margin-top: 30px;
+    background-color: var(--main-accent);
+    color: var(--main-white);
+    padding: 0.5rem 1.5rem;
+    border-radius: 10px;
+}
+
+.columnGap{
+    column-gap: 1px;
+    margin-top: 10px;
+}
