--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body{
+  background-color: var(--main-grey);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
