--- a/src/Components/Pages/LandingPage/LandingPage.module.css
+++ b/src/Components/Pages/LandingPage/LandingPage.module.css
@@ -1,17 +1,16 @@
 .header {
   color: var(--black);
-  background-color: var(--main-grey);
   width: 100%;
   height: 35vh;
 }
 .mid {
   color: var(--black);
+  background-color: var(--main-white);
   width: 100%;
   height: 45vh;
 }
 .footer {
   color: var(--black);
-  background-color: var(--main-grey);
   text-align: center;
   width: 100%;
   height: 30vh;
