--- a/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
+++ b/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
@@ -14,15 +14,10 @@
     border-radius: 5px;
     background-color: lightgray;
     width:70%;
-    height: 95vh;
+    height: max-content;
     overflow: hidden;
  }
  
-.reservationColor{
-    background-color: var(--main-grey);
-    height: 100vh;
-}
-
 .reservationTitle{
     text-align: center;
     color: black;
