--- a/src/Components/Pages/CancelPage/CancelPage.module.css
+++ b/src/Components/Pages/CancelPage/CancelPage.module.css
@@ -7,7 +7,7 @@
 }
 .cancelAlign{
     border-radius: 5px;
-    background-color: lightgray;
+    background-color: var(--light-grey);
     width:70%;
     height: max-content;
     overflow: hidden;
