--- a/src/Components/Pages/CheckInPage/CheckInPage.module.css
+++ b/src/Components/Pages/CheckInPage/CheckInPage.module.css
@@ -1,7 +1,7 @@
 /* styles */
 .checkAlign{
     border-radius: 5px;
-    background-color: lightgray;
+    background-color: var(--light-grey);
     width:70%;
     height: max-content;
     overflow: hidden;
