--- a/src/Components/Pages/LoginPage/LoginPage.module.css
+++ b/src/Components/Pages/LoginPage/LoginPage.module.css
@@ -11,6 +11,7 @@
     margin-top: 1rem;
     padding: 1rem 1rem;
     border: none;
+    border-radius: 10px;
     color: var(--main-white);
-    background-color: #4285f4;
+    background-color: var(--main-accent);
   }
