--- a/src/Components/Pages/ReportPage/ReportPage.module.css
+++ b/src/Components/Pages/ReportPage/ReportPage.module.css
@@ -12,24 +12,21 @@
     color: var(--black);
 }
 
-.reportInputBox{
+.reportInputBox, .reportInputBoxLong{
     border-radius: 10px;
     background: var(--main-white);
     border-color: var(--black);
     padding: 10px;
-    width: 200px;
     height: 30px;
     margin-left: 10px;
 }
 
+.reportInputBox {
+    width: 200px;
+}
+
 .reportInputBoxLong{
-    border-radius: 10px;
-    background: var(--main-white);
-    border-color: var(--black);
-    padding: 10px;
     width: 500px;
-    height: 30px;
-    margin-left: 10px;
 }
 
 .reportBtn{
