--- a/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
+++ b/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
@@ -12,7 +12,7 @@
 
 .reservationAlign{
     border-radius: 5px;
-    background-color: var(--light-grey);
+    background-color: lightgray;
     width:70%;
     height: max-content;
     overflow: hidden;
@@ -20,11 +20,23 @@
  
 .reservationTitle{
     text-align: center;
-    color: var(--black);
+    color: black;
+}
+
+.reservationLongBox{
+    border-radius: 10px;
+    background: white;
+    border-color: white;
+    padding: 10px;
+    width: 80%;
+    min-width: 50px;
+    max-width: 620px;
+    height: 35px;
+    margin-left: 150px;
 }
 
 .reservationLabel{
-    color: var(--black);
+    color: black;
     margin-top: 10px;
     margin-left:  150px;
 }
@@ -32,27 +44,18 @@
 input{
     display: flex;
     flex-direction: column;
-    border: 1px solid var(--dark-grey);
+    border: 1px solid gray;
     font-size: 1.1em;
 }
 
-.reservationLongBox, .reservationInputBox{
+.reservationInputBox{
     border-radius: 10px;
-    background: var(--main-white);
-    border-color: var(--main-white);
+    background: white;
+    border-color: white;
     padding: 10px;
+    width: 200px;
     height: 35px;
     margin-left: 150px;
-}
-
-.reservationLongBox {
-    width: 80%;
-    min-width: 50px;
-    max-width: 620px;
-}
-
-.reservationInputBox{
-    width: 200px;
 }
 
 .reservationBtn{
@@ -67,7 +70,7 @@ input{
 .garageFloor{
     margin-top: 20px;
     border-style: solid;
-    border-color: var(--black);
+    border-color: black;
     width: 300px;
     height: 110px;
 }
@@ -75,7 +78,17 @@ input{
 .parkingSpot{
     height: 45px;
     width: 30px;
-    background-color: var(--light-green);
+    background-color: aquamarine;
+    margin-left:-10px;
+    margin-right:-30px;
+    margin-top: 5px;
+    margin-bottom: 2px;
+}
+
+.parkingSpot2{
+    height: 45px;
+    width: 30px;
+    background-color: red;
     margin-left:-10px;
     margin-right:-30px;
     margin-top: 5px;
@@ -84,16 +97,16 @@ input{
 
 .parkingLabel{
     margin-left: 8px;
-    color: var(--main-white);
+    color: white;
 }
 
 .error{
-    color: var(--red);
+    color: red;
     margin-left: 150px;
 }
 .datePicker{
-    border-color: var(--main-white);
-    background-color: var(--main-white);
+    border-color: white;
+    background-color: white;
     border-radius: 10px;
     height: 35px;
     width: 200px;
