--- a/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
+++ b/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
@@ -75,7 +75,7 @@ input{
 .parkingSpot, .parkingSpot2{
     height: 45px;
     width: 30px;
-    background-color: aquamarine;
+    background-color: var(--light-green);
     margin-left:-10px;
     margin-right:-30px;
     margin-top: 5px;
@@ -83,7 +83,7 @@ input{
 }
 
 .parkingSpot2{
-    background-color: red;
+    background-color: var(--red);
 }
 
 .parkingLabel{
