--- a/src/Components/EmployeePages/ViewCheckInPage.module.css
+++ b/src/Components/EmployeePages/ViewCheckInPage.module.css
@@ -1,6 +1,8 @@
 .rowBorder {
     text-align: center;
     border-right: solid 3px var(--black);
+    width: 5rem;
+    padding: 0 .5rem;
 }
 
 .rowBorder:nth-child(1){
