--- a/src/Components/Pages/LandingPage/LandingPage.module.css
+++ b/src/Components/Pages/LandingPage/LandingPage.module.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 45vh;
 }
+
 .footer {
   color: var(--black);
   text-align: center;
@@ -18,7 +19,7 @@
 
 .landingHeader {
   padding-top: 3.5rem;
-  font-size: 3rem;
+  font-size: 2.7rem;
 }
 
 .landingSub {
@@ -81,4 +82,73 @@
 }
 .checkIn:hover {
   background-color: var(--dark-green);
+}
+
+@media only screen and (max-width: 1200px){
+  .landingHeader{
+    font-size: 2rem;
+  }
+
+  .landingSub {
+    font-size: 1.8rem;
+  }
+
+  .reserve {
+    width: 25rem;
+    font-size: 1.6rem;
+  }
+
+  .cancel, .checkIn{
+    width: 25rem;
+    font-size: 1.6rem;
+  }
+  .cancel{
+    margin-right: 2rem;
+  }
+}
+
+@media only screen and (max-width: 910px){
+  .landingHeader{
+    font-size: 1.8rem;
+  }
+
+  .landingSub {
+    font-size: 1.6rem;
+  }
+
+  .reserve {
+    width: 16rem;
+    font-size: 1.25rem;
+  }
+
+  .cancel, .checkIn{
+    width: 16rem;
+    font-size: 1.6rem;
+  }
+  .cancel{
+    margin-right: 2rem;
+  }
+}
+
+@media only screen and (max-width: 630px){
+  .landingHeader {
+    font-size: 1.7rem;
+  }
+
+  .landingSub {
+    font-size: 1.7rem;
+  }
+
+  .reserve {
+    width: 12rem;
+    font-size: 0.921rem;
+  }
+
+  .cancel, .checkIn{
+    width: 12rem;
+    font-size: 1rem;
+  }
+  .cancel{
+    margin-right: 2rem;
+  }
 }
