--- a/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
+++ b/src/Components/Pages/ReservationPage/ReservationForm/ReservationForm.module.css
@@ -53,28 +53,27 @@ input{
 }
 
 .reservationBtn{
-    margin-left: 430px;
-    margin-top: 30px;
     background-color: var(--main-accent);
     color: var(--main-white);
+    margin-top: 1rem;
     padding: 0.5rem 1.5rem;
     border-radius: 10px;
 }
 
 .garageFloor{
-    margin-top: 20px;
+    margin-top: 1rem;
     border-style: solid;
     border-color: var(--black);
-    width: 300px;
-    height: 110px;
+    width: 19.5rem;
+    height: 7.25rem;
 }
 
 .parkingSpot, .parkingSpot2{
-    height: 45px;
-    width: 30px;
+    height: 3rem;
+    width: 2rem;
     background-color: var(--light-green);
-    margin-left:-10px;
-    margin-right:-30px;
+    margin-left:-9px;
+    margin-right:-20px;
     margin-top: 5px;
     margin-bottom: 2px;
 }
@@ -117,10 +116,6 @@ input{
         margin-left: 7.5rem;
     }
 
-    .reservationBtn{
-        margin-left: 20rem;
-    }
-
     .error{
         margin-left: 7.5rem;
     }
@@ -141,10 +136,6 @@ input{
         margin-left: 3.5rem;
     }
 
-    .reservationBtn{
-        margin-left: 15rem;
-    }
-
     .error{
         margin-left: 3.5rem;
     }
@@ -163,10 +154,6 @@ input{
 
     .reservationLabel{
         margin-left: 3.5rem;
-    }
-
-    .reservationBtn{
-        margin-left: 6rem;
     }
 
     .error{
