--- a/src/Components/Pages/ViewPage/ViewPage.module.css
+++ b/src/Components/Pages/ViewPage/ViewPage.module.css
@@ -54,3 +54,15 @@
   border-radius: 10px;
   margin-bottom: 1.5rem;
 }
+
+@media only screen and (max-width: 900px){
+  .contains{
+    margin-left: 4rem;
+  }
+ }
+
+@media only screen and (max-width: 600px){
+ .contains{
+   margin-left: 0rem;
+ }
+}
