--- a/src/Components/EmployeePages/ViewCheckInPage.module.css
+++ b/src/Components/EmployeePages/ViewCheckInPage.module.css
@@ -8,3 +8,9 @@
 .rowBorder:nth-child(1){
     border-left: solid 3px var(--black);
 }
+
+@media only screen and (max-width: 800px){
+    .title {
+        font-size: 2rem;
+    }
+}
