--- a/src/Components/EmployeePages/ViewCheckInPage.module.css
+++ b/src/Components/EmployeePages/ViewCheckInPage.module.css
@@ -9,8 +9,17 @@
     border-left: solid 3px var(--black);
 }
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 1100px){
     .title {
-        font-size: 2rem;
+        font-size: 1.5rem;
+    }
+    .content {
+        font-size: .75rem;
+    }
+}
+
+@media only screen and (max-width: 950px){
+    .title {
+        font-size: 1rem;
     }
 }
